# DUT20d-Car-Management-System

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  package.xml  requirements.txt  startup.sh  tsconfig.json
config/: car.yaml
groundstation/: CMakeLists.txt  package.xml  requirements.txt
groundstation/src/: app.py  database.py  pinger.py  rosnode.py  sshclient.py  state.py  webserver.py
launch/: groundstation.launch  metanodes.launch  statistics.launch
msg/: BagTopicInfo.msg  PingResult.msg  RecordingConfig.msg  RecordingStatus.msg  Statistic.msg  Statistics.msg
operator/: package-lock.json  package.json
operator/public/: index.html
operator/src/: App.js  index.js  style.css
operator/src/blocks/: ComputeboxBlock.js  GitBlock.js  HealthBlock.js  LogbookBlock.js  RecordingBlock.js
public/: manifest.json
src/: app.py  groundstation-logbook.py  groundstation-ros.py  groundstation-ssh.py  groundstation-webserver.py  groundstation.py  index.js  index.tsx  pingnode.cpp  recordingnode.py  statistics.cpp  statisticsnode.cpp
src/groundstation/: database.py  logbook.py  logbookconnector.py  models.py  pinger.py  rosmeta.py  rosnode.py  rosrecording.py  sshclient.py  state.py  systemdservices.py  utils.py  webserver.py
src/groundstation/logbook/: logbook.py  test.sh
src/groundstation/rosnode/: pinger.py  rosmeta.py  rosnode.py  rosrecording.py  transformcapture.py  webserver.py
src/groundstation/ssh/: sshclient.py  sshping.py  systemdservices.py  webserver.py
src/groundstation/utils/: dict_merge.py
src/logbookserver/: main.py
src/webapp/: Dashboard.js  Dashboard.tsx  LogbookOnly.tsx  react-contextmenu.css  statetypes.tsx  style.css
src/webapp/blocks/: ComputeboxBlock.js  ComputeboxBlock.tsx  GitBlock.js  GitBlock.tsx  HealthBlock.js  HealthBlock.tsx  LogbookBlock.js  LogbookBlock.tsx  NodesBlock.js  NodesBlock.tsx  PingBlock.tsx  RecordingBlock.js  RecordingBlock.tsx  ServicesBlock.js  ServicesBlock.tsx  SystemdLogs.tsx  TopicsBlock.js  TopicsBlock.tsx  TransformsBlock.tsx
src/webapp/style/: _colors.sass  app.sass  contextmenu.sass
src/webapp/util/: EditableText.js  EditableText.tsx  Indicator.tsx  Modal.tsx  PubSubSmartness.tsx  RecordingPresets.tsx  RecursivePureComponent.tsx  Requestor.js  Requestor.tsx  TimebasedIndicator.js  TimebasedIndicator.tsx  Timing.js  Timing.tsx  Tooltip.js  Tooltip.tsx
srv/: RecordingGetBagInfo.srv  RecordingUpdateConfig.srv
