<?xml version="1.0"?>
<package format="2">
    <name>cms</name>
    <version>0.0.0</version>
    <description>The cms system</description>
    <maintainer email="s.huizenga@dutracing.nl">sijmen</maintainer>
    <license>Apache-License-2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

    <build_depend>message_generation</build_depend>
    <depend>message_runtime</depend>
</package>
