<?xml version="1.0"?>
<package format="2">
    <name>cms_groundstation</name>
    <version>0.0.0</version>
    <description>The cms ground station</description>
    <maintainer email="s.huizenga@dutracing.nl">sijmen</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
</package>
